# Tire-au-canard-computer-vision

./: .gitignore  README.md  _game.py  game.py  game_data.py  global_data.py  main.py  model.py  pyproject.toml  requirements.txt  target.py
components/: __init__.py  atarget.py  button.py  cursor.py  quit_button.py
computerVision/: pyvenv.cfg
docs/: HOW_TO_PLAY.md  MODEL.md
model/: amodel.py  available_models.py  model.py
src/: game.py  main.py
src/components/: __init__.py  cursor.py  player_hand.py  rect_target.py  target.py
src/model/: README.md  default.py
