[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "tire-au-cannard"
requires-python = "== 3.11.*"
readme = "README.md"
dependencies = [
    "opencv-python>=4.8.0",
    "mediapipe==0.10.9",
    "numpy>=1.24.0",
]
dynamic = ["version"]

[project.scripts]
tire-au-cannard = "main:main"